# programmiersrachen-aufgabe-1

./: README.md
aufgabe_1.3/: CMakeLists.txt
source/: CMakeLists.txt  aufgabe1_03.cpp  aufgabe1_10.cpp  aufgabe1_11.cpp  aufgabe1_12.cpp  aufgabe1_13.cpp  aufgabe1_14.cpp  aufgabe1_15.cpp  aufgabe1_16.cpp  aufgabe1_9.cpp  mainDoc.cpp  tests.cpp
