add_executable(helloworld helloworld.cpp)
#target_link_libraries(helloworld my_fancy_library)

add_executable(tests tests.cpp)

add_executable(aufgabe1_9 aufgabe1_9.cpp)

add_executable(aufgabe1_10 aufgabe1_10.cpp)


# Kommentieren Sie die folgenden Zeilen für die Aufgabe `mileToKilometer` aus
#add_executable(mileToKilometer mileToKilometer.cpp)
